test: enhance AutoSendDraftTaskTest to cover MESSAGE_TOO_BIG scenario